修复(review): 修正审核任务汇总接口异常